# ff-helper

./: .eslintrc.yml  .gitignore  .mocharc.yml  .prettierignore  CHANGELOG.md  Cargo.toml  README.md  addon.d.ts  addon.js  hierarchy.html  index.html  modules.html  nyc.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
assets/: highlight.css  navigation.js  search.js
bak-neon/: lib.rs.txt
demo/: index.ts
functions/: configuration.html  getMetadata.html  getScreenshot.html  getScreenshotAt.html  getScreenshotAtSync.html  getScreenshotRaw.html  getScreenshotRawSync.html  getScreenshotScale.html  getVideoDuration.html  getVideoDurationDisplay.html  getVideoDurationDisplaySync.html  getVideoDurationSync.html  getVideoInfo.html  getVideoInfoSync.html  getVideoPreview.html  getVideoPreviewJpeg.html  getVideoPreviewRaw.html  getVideoPreviewRawSync.html  getVideoPreviewScale.html  getVideoRotation.html  getVideoRotationSync.html  license.html  screengen.html  screengenScale.html  version.html  versionInfo.html
interfaces/: VideoInfo.html
src/: helper.rs  lib.rs  screengen.rs  video_preview.rs
src/screengen/: moz.rs  video_preview.rs
test/: index.test.ts  index.ts  setup.ts
ts-src/: index.ts
variables/: screengen.html  screengenScale.html
