[package]
name = "ff-helper"
version = "0.0.1"
description = "ffmpeg helper by native binding"
authors = ["magicdawn"]
license = "MIT"
edition = "2021"
exclude = ["*.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.8", features = ["napi4"] }
napi-derive = { version = "2.16.10" }
ffmpeg-next = "7.0.4"
ffmpeg-sys-next = "7.0.2"
once_cell = "1.19.0"
env_logger = "0.11.5"
log = "0.4.22"
image = "0.25.2"
rayon = "1.10.0"
mozjpeg = "0.10.9"


[build-dependencies]
napi-build = "2.1.3"


[profile.release]
lto = true
strip = "debuginfo"
